BB-17311: Multiple alignment issues on price list creation page on tablet (#31690)
* BB-17311: Multiple alignment issues on price list creation page on tablet
- Fix multiple aligment issues
- Fix behat

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/mobile/form.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/mobile/form.scss
@@ -4,6 +4,11 @@
 
 @use 'sass:math';
 
+select[multiple] {
+    height: $input-size;
+    padding: 4px 8px;
+}
+
 .input,
 .selector,
 .uneditable-input {
@@ -188,5 +193,12 @@
 
     .form-buttons {
         margin-bottom: $form-container-control-row-space;
+    }
+}
+
+@include non-touch-device {
+    select[multiple] {
+        height: $select-multiple-height;
+        padding: $select-multiple-inner-offset;
     }
 }
