--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/form/form.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/form/form.scss
@@ -128,8 +128,8 @@ select[multiple] {
     box-sizing: $input-box-sizing;
     outline: $input-outline;
     width: $field-width;
-    height: $select-multiple-height;
-    padding: $select-multiple-inner-offset;
+    height: $field-size;
+    padding: $input-inner-offset;
     vertical-align: top;
     overflow-y: auto;
 
@@ -528,5 +528,12 @@ input[type='number'] {
                 margin-left: 8px;
             }
         }
+    }
+}
+
+@include non-touch-device {
+    select[multiple] {
+        height: $select-multiple-height;
+        padding: $select-multiple-inner-offset;
     }
 }
