--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/settings/datepicker.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/settings/datepicker.scss
@@ -41,4 +41,5 @@ $datepicker-datevariables-list-list-style-type: disc !default;
 $dropdown-menu-calendar-padding: 0 !default;
 $dropdown-menu-calendar-margin: 0 !default;
 $fields-row-datepicker-input-margin-end: 5px !default;
+$fields-row-datepicker-input-min-width: 100px !default;
 $fields-row-timepicker-input-min-width: 70px !default;
